--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,10 @@ table {
     width: 100%;
 }
 
+.AbbTable {
+    width: 40%;
+}
+
 .login {
     padding-left: 15%;
 }
@@ -65,7 +69,7 @@ table {
 }
 
 .border_space {
-    border-spacing: 10%;
+    border-spacing: 10px;
     padding: 10%;
 }
 
@@ -110,6 +114,15 @@ h2 {
 
 
 /* STRUCTURE */
+.my_header {
+    background: #61dafb;
+    color: black;
+    font-size: 40px;
+}
+
+.about_p {
+    padding-left: 1%
+}
 
 .wrapper {
     display: flex;
@@ -359,3 +372,48 @@ input[type=text]::placeholder {
 #icon {
     width: 60%;
 }
+
+button {
+    border-radius: 5px;
+}
+
+button[editext="edit-button"] {
+    color: #000;
+    width: 50px;
+}
+
+button[editext="save-button"] {
+    width: 50px;
+
+}
+
+
+
+button[editext="cancel-button"] :hover{
+    background: crimson;
+    color: #fff;
+
+
+}
+input, textarea {
+    background: #1D2225;
+    color: #F4C361;
+    font-weight: bold;
+    border-radius: 5px;
+}
+#outlined-multiline-static{
+    width:50ch;
+    background-color: #f6f6f6;
+    padding: 15px;
+}
+div[editext="view-container"], div[editext="edit-container"] {
+    background: #6293C3;
+    padding: 15px;
+    border-radius: 5px;
+    color: #fff;
+    max-width: fit-content;
+}
+#days{
+width: 22%;
+}
+
